--- a/package.json
+++ b/package.json
@@ -13,16 +13,26 @@
     "@fastify/static": "^8.0.0",
     "@fastify/vite": "^7.0.0",
     "@inertiajs/react": "^2.0.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/nprogress": "^0.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.0",
+    "fastify-type-provider-zod": "^6.1.0",
     "lucide-react": "^0.556.0",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
