--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "vite build && tsc",
+    "build": "rimraf dist && vite build && tsc -p tsconfig.server.json",
     "start": "node dist/server.js"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "@types/node": "^22.19.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "rimraf": "^6.1.2",
     "tsx": "^4.19.0",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
